# netexRealisationGuideSwitzerland

./: .gitignore  .gitmodules  Netex_Bern_Olten_Zürich3.xml  README.md  index.html  pyproject.toml  setup.py
docs/: 01_intro_roadmap  01_intro_roadmap.md  02_basic_concepts.md  03_guiding_principles.md  04_files.md  05_frames.md  06_stops.md  07_service.md  08_service_calendars.md  08_timetable.md  09_common.md  09_timetable.md  10_common.md  A1_annex_resources_references.md  A4_annex_glossary.md  Annex_comparison_EPIP_EPIAP.md  Annex_comparison_France_Norway.md  Annex_resources_references.md  README.md  index.md  uc01_durchbindung.md  uc02_joining_splitting.md  uc03_transfers.md  uc05_journey_parts.md  uc06_modes_submodes.md  uc07_checkconstraints.md  uc09_accessibility.md  uc13_changes_in_destination.md  uc_15_formations.md  uc_midnight_passing.md  uc_transfers.md
examples/: Experimental_Minimal_TemplateJourney_Passingtime.xml  Experimental_Passingtimes_Bus803Nyon.xml  NeTEx-Bern-Spiez-Zweisimmen-o-Brig-PassingTime.xml  NeTEx-Bern-Spiez-Zweisimmen-o-Brig.xml  NeTEx_Bern-Spiez-ZweisimmenBrig_JourneyPartCouple.xml  NeTEx_Bern_Olten_Zürich3.xml  NeTEx_CH_BLS_Bern_Luzern_Change_TrainNumber_and_other_stuff.xml  NeTEx_CH_BLS_Bern_Luzern_DestinationChange.xml  NeTEx_CH_Bern_Olten_Zürich_Notes_Facilities.xml  NeTEx_CH_Bern_Spiez_Zweisimmen_Passingtime.xml  NeTEx_CH_Bern_Spiez_Zweisimmen_TimeDemandType.xml  NeTEx_CH_Bern_Spiez_Zweisimmen_o_Brig.xml  NeTEx_CH_DRT_Line_50.110.xml  NeTEx_CH_DRT_Line_Dependent_On_Passengers_At_Start.xml  NeTEx_CH_Experimental_Passingtimes_Bus803_Nyon.xml  NeTEx_CH_Fribourg_Bern_Zuerich_Perron.xml  NeTEx_CH_Interlaken_BS_Freiburg_Breisach_Durchbindung.xml  NeTEx_Interlaken_BS_Freiburg_Breisach_Durchbindung_V.3.xml  NeTEx_Spiez_Interlaken_Ost_Version1.2.xml  (+6 more)
(+6285 files in other folders)
