[build-system]
requires = ["setuptools>=70","markdown","pygments","lxml"]
build-backend = "setuptools.build_meta"

[project]
name = "netex-rg-ch"
version = "0.1.3"
description = "Tools to build docs for NeTEx RG CH."
requires-python = ">=3.13"
dependencies = [
    "lxml","pyschematron","pygments","build","pip","markdown"
]

[project.scripts]
check-links ="tools.check_links.check_links:main"
check-schematron = "tools.check_schematron.check_schematron:main"
expand-docs="tools.expand_docs.expand_docs:main"
md-builder="tools.md_builder.md_builder:main"
pycore="tools.pycore.pycore:main"
schematron-builder="tools.schematron_builder.schematron_builder:main"
xml-validator="tools.validation.xml_validator:main"
xml-snippets="tools.xml_snippets.build_xml_snippets:main"

# Only package the specified packages
[tool.setuptools.packages.find]
include = ["tools*"]